--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-ktorVersion=2.0.0-beta-1
-kotlinVersion=1.6.10
-logbackVersion=1.2.10
-kmongoVersion=4.4.0
+ktor_version=2.0.3
+kotlin_version=1.7.0
+logback_version=1.2.3
 kotlin.code.style=official
