--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-ktor_version=2.0.3
-kotlin_version=1.7.0
-logback_version=1.2.3
+ktorVersion=2.0.3
+kotlinVersion=1.7.0
+logbackVersion=1.2.11
+koinVersion=3.2.0
+kmongoVersion=4.6.1
 kotlin.code.style=official
